# ekf_loam

./: README.md
EKF_LOAM/: CMakeLists.txt  package.xml
EKF_LOAM/config/: ekf_loam_parameters.yaml  os1_16_parameters.yaml  os1_32_parameters.yaml  velodyne_16_parameters.yaml  velodyne_32_parameters.yaml  vlp_16_parameters.yaml
EKF_LOAM/include/: settings_ekf_loam.h
EKF_LOAM/launch/: ekf_loam.launch  ekf_loam_pioneer.launch  ekf_loam_tf.launch  pioneer_ekf_loam.launch
EKF_LOAM/rviz/: ekf_loam_trajectory.rviz
EKF_LOAM/scripts/: data_register.py
EKF_LOAM/src/: IntegrationTransform.cpp  LiDARMapping.cpp  LiDAROdometry.cpp  PreTreatment.cpp  TransformOdometry.cpp  TransformProjected.cpp
adaptive_filter/: README.md
adaptive_filter/config/: adaptive_filter_parameters.yaml  nfn_parameters.yaml  nfn_parameters2.yaml
adaptive_filter/src/: EKFAdaptiveFilter (3rd copy).cpp  EKFAdaptiveFilter (another copy).cpp  EKFAdaptiveFilter.cpp
docker/: Dockerfile  build.sh  howtouse.md
ekf_loam/EKF_LOAM/config/: ekf_loam_parameters.yaml
ekf_loam/EKF_LOAM/launch/: ekf_loam.launch
ekf_loam/EKF_LOAM/src/: LiDAROdometry.cpp  PreTreatment.cpp
ekf_loam/adaptive_filter/: CMakeLists.txt  package.xml
ekf_loam/adaptive_filter/include/: settings_adaptive_filter.h
ekf_loam/adaptive_filter/src/: EKFAdaptiveFilter.cpp
ekf_loam/docker/: run.sh
